--- a/backend/jsconfig.json
+++ b/backend/jsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     "moduleResolution": "nodenext",
+    "module": "NodeNext",
     "target": "ES2021",
-    "checkJs": true,
+    "checkJs": false,
     "allowJs": true
   }
 }
