--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,11 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.3.0",
     "@strapi/plugin-users-permissions": "5.3.0",
-    "@strapi/strapi": "5.3.0",
+    "@strapi/strapi": "^5.4.0",
     "better-sqlite3": "11.3.0",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
+    "paytmchecksum": "^1.5.1",
     "pg": "^8.13.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
